--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@koa/cors": "2",
     "gphoto2": "^0.3.0",
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0"
