--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@koa/cors": "2",
     "gphoto2": "^0.3.0",
     "koa": "^2.6.2",
-    "koa-logger": "^3.2.0"
+    "koa-logger": "^3.2.0",
+    "koa-router": "^7.4.0"
   }
 }
